@@ -1,6 +1,9 @@
 CVS code -
 - General:
 	- Miscellaneous comment fixes. (DLR)
+	- Don't install the nanorc manpages if nano is built without
+	  nanorc support.  Changes to configure.ac, doc/man/Makefile.am,
+	  and doc/man/fr/Makefile.am. (DLR)
 - winio.c:
   do_credits()
 	- Update the last copyright notice to include 2006. (DLR)
